--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
                             <mainClass>sasi.Main</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>cleanr</finalName>
                 </configuration>
             </plugin>
     	</plugins>
